Bug 447238 - In tabs bar the icon associated to home folder is the template one.
Summary: In tabs bar the icon associated to home folder is the template one.
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.12.0
Platform: Manjaro Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-19 18:38 UTC by Andrea E. Monti
Modified: 2022-08-21 11:57 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.98
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea E. Monti 2021-12-19 18:38:02 UTC
Open Dolphin. Open another tab (ctrl+T) in order to make the tab bar visible.

OBSERVED RESULT
In the tab title, beside the word "Home" there is a small icon that corresponds to "template folder".
See pic here (https://www.reddit.com/r/kde/comments/rk1bog/wrong_tab_icon_for_home_folder_in_dolphin/ )

EXPECTED RESULT
Same but with a small house.

SOFTWARE/OS VERSIONS
Manjaro KDE latest update
KDE Plasma Version: 5.23.4
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.2
Dolphin Version:  21.12.0
Comment 1 Nicolas Fella 2021-12-19 20:27:11 UTC
What does it look like using the breeze icon theme?
Comment 2 Andrea E. Monti 2021-12-19 21:39:18 UTC
(In reply to Nicolas Fella from comment #1)
> What does it look like using the breeze icon theme?

I looks like
/usr/share/icons/breeze/places/16/folder-templates.svg
which is the correspondent of the one shown in the picture in reddit:
/usr/share/icons/ePapirus/16x16/places/folder-templates.svg
as ePapirus is my current icon theme.
Comment 3 Nicolas Fella 2021-12-19 22:34:02 UTC
It looks like your templates dir is set to $HOME (this is defined in .config/user-dirs.dirs)

https://invent.kde.org/frameworks/kio/-/merge_requests/676 makes it use the appropriate home icon instead
Comment 4 Andrea E. Monti 2021-12-20 11:01:00 UTC
(In reply to Nicolas Fella from comment #3)
> It looks like your templates dir is set to $HOME (this is defined in
> .config/user-dirs.dirs)
> 
> https://invent.kde.org/frameworks/kio/-/merge_requests/676 makes it use the
> appropriate home icon instead

You were right. Now I set everything correctly in that file.
Weird because in settings > applications > places I don't have a way to set the path for templates folder, nor for the shared/public one.
Comment 5 Ahmad Samir 2022-08-21 11:57:28 UTC
Git commit 30d22d282b0a9b1de359353f064b033ba2d30887 by Ahmad Samir.
Committed on 21/08/2022 at 11:57.
Pushed by ahmadsamir into branch 'master'.

Ensure iconForStandardPath() returns user-home for QStandardPaths::HomeLocation
FIXED-IN: 5.98

M  +41   -24   src/core/kioglobal_p.cpp

https://invent.kde.org/frameworks/kio/commit/30d22d282b0a9b1de359353f064b033ba2d30887