Always use user-home icon for the home dir

$HOME can be the standard path for multiple things, e.g. for templates

Make sure we always get user-home instead of one of the other icons

BUG: 447238